Ridiculously large commit :( - added testing, icons, restylized app as krakowzoo, healthcheck,